Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -3209,7 +3209,7 @@ font-weight: bold !important;
 .icon-block-xs img,
 .platform-large img,
 .image-mini img {
-    border-radius: 50%;
+    border-radius: 0;
 }
 
 .cover-link.coinType12274{
